<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteJournal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:gravity="center"
                android:text="@string/WriteJournalTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        </LinearLayout>

        <EditText
            android:id="@+id/DatePicker1"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:ems="1"
            android:inputType="date"
            android:hint="@string/Date"
            android:autofillHints="@+id/DatePicker1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EmotionalTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <RatingBar
            android:text="@string/BarTitle"
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:max="5"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/PhysicalTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <RatingBar
            android:text="@string/RBarTitle"
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:max="5"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ReasonTitle"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:autofillHints="no"
            android:inputType="text"
            android:id="@+id/Reason" />

        <Button
        android:id="@+id/submitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#f00"
        android:padding="10dp"
        android:text="@string/SubmitTitle"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="11sp"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




